<resources>
    <string name="app_name">Chatty</string>
    <string name="appl_name2">Chat</string>
    <string name="Welcome">Welcome to appname</string>
    <string name="Chatty">Chatty is the easy way to connect \n with friends and family for free \n without ads.</string>
    <string name="start_chat">Start Chat</string>
    <string name="Create_Account">CREATE ACCOUNT</string>
    <string name="username">Your name</string>
    <string name="email">Your E-Mail Address</string>
    <string name="email2">E-Mail Address</string>
    <string name="mot_de_passe">Your Password</string>
    <string name="create_an_account_to_get_all_n_feature">Create an account to get all feature</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="test">Button</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="get_started">GET STARTED</string>
    <string name="skip">skip</string>
    <string name="textview2">Textview</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="register_here"><u>Sign up</u></string>
    <string name="new_user">New user ?</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="login">Sign in</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="it_s_okay_reset_your_password">It\'s okay! Reset your password</string>
    <string name="reset">Continue</string>
    <string name="textview">TextView</string>
    <string name="logout">\t Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message_here">  Say something</string>
    <string name="salam">salam</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="msg">Message</string>
    <string name="chat">Chat</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="test2">Coding in Flow</string>
    <string name="navigation_drawer_open">Open navigation draw</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="change">Change</string>
    <string name="delete_account"> \t Delete Account</string>
    <string name="seen">seen</string>
    <string name="view_profile">View profile</string>
    <string name="create_chatroom">create char room</string>
    <string name="create_group">Create Group</string>
    <string name="please_write_your_message_here">Write your message here</string>
    <string name="search">Search...</string>
    <string name="signup">Create \n Account</string>
    <string name="create_account_to_get_all_features">Create account to get all features.</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="chats">Chats</string>
    <string name="chats2">\t\t Chats</string>
    <string name="last_seen">Last seen</string>
    <string name="w_alikom_salam">W alikom salam</string>
    <string name="copy">Copy</string>
    <string name="enter_a_group_name">Name</string>
    <string name="salam_alikom">Salam alikom</string>
    <string name="group_name">Group Name</string>
    <string name="name">Name</string>
    <string name="description_profile">This name will be visible to all the users of Chatty app</string>
    <string name="about">About</string>
    <string name="description_about">Hey there: i am using Chatty App.</string>
    <string name="mail">xxxx@Gmail.com</string>
    <string name="line_1">Line 1</string>
    <string name="settings">Settings</string>
    <string name="new_password">New Password</string>
    <string name="recover_password">Recover password</string>
    <string name="enter_old_password">Current Password</string>
    <string name="change_password">\t Change password</string>
    <string name="change_password_description">For your safety, we ask you to set yourself a secure password that contains both uppercase, lowercase letters as well as numbers.</string>
    <string name="clean_chat">Clean Chat</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="alert_delete_account">This action is final and you will be unable to recover any data.</string>
    <string name="dangerous_area">\t \t Dangerous area</string>
    <string name="need_help">\t Need Help?</string>
    <string name="Security">\t\t Security</string>
    <string name="wifi">WIFI IS OFF</string>
    <string name="no_internet_connexion">No Internet Connexion.</string>
    <string name="back_online">Back Online.</string>
    <string name="alert_delete_account2">You cannot undo this action !</string>
    <string name="delete_account_description">We\'re sorry to see you go. If you want to permanently delete your account please enter your current password and click delete account.</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="delete">Delete</string>
    <string name="logout_confirmation">Are you sure you want to logout ?</string>
    <string name="logout2">Logout</string>
    <string name="button_x_clicked">Button X Clicked</string>
    <string name="edit">Edit</string>
    <string name="people">People</string>
    <string name="others">\t\t Others</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="search2">Search</string>
    <string name="search_here">Search here...</string>
    <string name="descriptionTextAddGroup">Please select an image and enter a group name.</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="group_image">Group image</string>
    <string name="my_rooms">My Rooms</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="number">15</string>
    <string name="add_about">Add about</string>
    <string name="number2">70</string>
    <string name="insert_emodji">Insert Emodji</string>
    <string name="reset_password_description">Enter your email address below to receive your password reset instructions.</string>
    <string name="send_message">ADD +</string>
    <string name="msgs">Messages</string>
    <string name="meet_new_people">Meet new people</string>
    <string name="edit_profile">\t  Edit Profile</string>
    <string name="change_your_name">\t Change your name</string>
    <string name="change_about">\t Change about</string>
    <string name="choose_friends">Choose Friends</string>
    <string name="ok">Ok</string>
    <string name="choose_a_image">Choose a image...</string>
    <string name="success_uploading">Success Uploading...</string>
    <string name="show_password">Show password</string>
</resources>
