<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain_layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/settings"
        android:textSize="21sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/settings_text">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksandbold"
            android:text="@string/username"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/profile_image"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksandregular"
            android:text="@string/about"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintLeft_toRightOf="@id/profile_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/chats"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:background="#EAEDED"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/chats2"
        android:fontFamily="@font/quicksandbold"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chat_settings"
        app:layout_constraintTop_toBottomOf="@id/constraint"/>

    <Button
        android:id="@+id/chat_settings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/change_password"
        android:fontFamily="@font/quicksandbold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/chats"
        app:layout_constraintBottom_toTopOf="@id/Security"/>

    <TextView
        android:id="@+id/dangerous_area"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:background="#EAEDED"
        android:layout_marginBottom="10dp"
        android:text="@string/dangerous_area"
        android:fontFamily="@font/quicksandbold"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_account"/>

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/delete_forever"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/delete_account"
        android:fontFamily="@font/quicksandbold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/alert_delete_icon"/>

    <TextView
        android:id="@+id/alert_delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/alert_delete_account"
        android:fontFamily="@font/quicksandregular"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/Others"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:background="#EAEDED"
        android:layout_marginBottom="10dp"
        android:text="@string/others"
        android:fontFamily="@font/quicksandbold"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/need_help"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawableStart="@drawable/logout_icon"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/logout"
        android:fontFamily="@font/quicksandbold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/dangerous_area"/>

    <Button
        android:id="@+id/need_help"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/help_icon"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/need_help"
        android:fontFamily="@font/quicksandbold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"/>

    <TextView
        android:id="@+id/Security"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:background="#EAEDED"
        android:layout_marginBottom="10dp"
        android:text="@string/Security"
        android:fontFamily="@font/quicksandbold"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_change_password"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/security"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/change_password"
        android:fontFamily="@font/quicksandbold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/Others"/>

</androidx.constraintlayout.widget.ConstraintLayout>