<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:background="#FFFFFF"
          app:cardCornerRadius="15dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_view_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#FFFFFF"
        android:layout_gravity="center_horizontal">

    <ImageButton
        android:id="@+id/addGroupImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/camera_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/groupImage"
        android:contentDescription="@string/group_image" />

    <TextView
        android:id="@+id/descriptionTextAddGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/descriptionTextAddGroup"
        android:fontFamily="@font/quicksandregular"
        android:textSize="18sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/groupImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextAddGroup"/>

     <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextrqius"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_a_group_name"
            android:fontFamily="@font/quicksandregular"
            app:met_floatingLabel="highlight"
            app:layout_constraintTop_toBottomOf="@id/groupImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:background="@drawable/button_maker"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/create"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/card_view_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/input"/>

    <Button
        android:id="@+id/btn_cancel_create_group"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_maker_dialog"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/card_view_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/input"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>